# id2xml

./: .gitignore  2014-10-07-safer-timeslot-grooming.patch  CHANGELOG.md  INSTALL  Makefile  README  README.datatracker  README.md  TODO  adjust.cgi  auto_post.cgi  changelog  convert-db  debug.py  display_first_two_pages.cgi  display_idnit.cgi  fix-91-scheduledsessions.py  import-doc-history  mksprintbranch  mksprintwiki  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements3.txt  status.cgi  timeout.cgi  upload_new.cgi  urls.py  validate_new.cgi
.devcontainer/: devcontainer.json  docker-compose.extend.yml  init.sh
5.12.1/: .gitignore
5.12.1-dev0/: .gitignore
6.21.0/: .gitignore
6.25.1.dev0/: .gitignore
6.3.0/: .gitignore
6.65.2.dev0/: .gitignore
6.86.1.dev0/: .gitignore
6.99.2.dev0/: .gitignore
CVS/: Entries  Repository
bootstrap/: README-DATATRACKER.rst
bootstrap-4.0.0-alpha.2/: README-DATATRACKER.rst
chris/: changelog
community-list-cleanup-r10190/: .gitignore
docker/: Dockerfile  README.md  app.Dockerfile  build  docker-compose.yml  docker-init.sh  run  settings_local.py
facelift-r9069/: .gitignore
id2xml/: __init__.py  parser.py
idst/: check.cgi  manual_post.cgi  upload.cgi  validate_new_experimental.cgi
iesg/: CGI_UTIL.pm  GEN_DBUTIL_NEW.pm  GEN_UTIL.pm  IETF.pm  gen_ballot_text.pl  gen_pwg_html.pl  idtracker.cgi
ietf/: bower.json  settings.py  settings_local.tmpl  tests.py  tools_pre_commit_hook_test.py  urls.py  utils.py  views.py
jelte/: changelog
liaison/: liaison_manager.cgi
meeting/: views.py
milestones-fixes/: .gitignore
pasi/: changelog
r6743/: runserver-wlo  save_meeting83
redesign/: README  changelog  mkdiagram  models.dot  old-models.txt  settings.py  tables.sql  tables.txt
rfclint/: changelog
rfctools_common/: LICENSE  MANIFEST.in  changelog  requirements.txt  setup.py
(+4057 files in other folders)
