# -------------------------------------------------------
# Copyright The IETF Trust 2011-2026, All Rights Reserved
# -------------------------------------------------------
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id2xml"
dynamic = ["version"]
authors = [
  {name = "Henrik Levkowetz", email = "henrik@levkowetz.com"},
]

description = "Convert text-format RFCs and Internet-Drafts to .xml format"
keywords = ["ietf", "rfc", "text", "internet-draft", "xml"]
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    'Intended Audience :: Other Audience',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Markup :: XML',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

dependencies = [
    "lxml",
    "pathlib2",
    "six",
    "xml2rfc>=2.8.2",
    "decorator",
]

[project.urls]
homepage = "https://github.com/ietf-tools/id2xml"
source = "https://github.com/ietf-tools/id2xml"
issues = "https://github.com/ietf-tools/id2xml/issues"
releasenotes = "https://github.com/ietf-tools/id2xml/releases"

[project.optional-dependencies]
test = [
        "coverage",
        "pycodestyle",
        "pyflakes",
        "tox",
]
dev = [
        "twine",
]

[project.scripts]
id2xml = "id2xml.run:run"

[tool.setuptools]
packages = ["id2xml"]
include-package-data = true

[tool.setuptools.package-data]
id2xml = ["data/*", "debug.py", "utils.py", "run.py"]

[tool.setuptools.dynamic]
version = {attr = "id2xml.__version__"}
